camo-derive/tests/cases/bounded_generics.rs
use camo_derive::Camo;

#[derive(Camo)]
struct Foo<T: Clone> {
    foo: T,
}

fn main() {}
